# pyplot_cpp

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: c-cpp.yml  cmake.yml
examples/: AdvancedGraph.md  AdvancedPlot.md
include/: CMakeLists.txt  graph.h  pyplot_cpp.h
include/pyplot_cpp/: Axisable.hpp  Bar.h  Bar.hpp  BaseGraph.h  BaseGraph.hpp  BasePlot.hpp  BasePlot3D.hpp  DiGraph.hpp  DynamicScriptRunner.hpp  Graph.h  Graph.hpp  Histogram.hpp  MultipleHistogram.hpp  MultiplePlot.hpp  MultiplePlot3D.hpp  MultipleScatter.hpp  MultipleScatter3D.hpp  MultipleTrisurfPlot.hpp  Plot.hpp  Plot3D.h  Plot3D.hpp  PythonRunner.hpp  PythonScript.hpp  Scatter.hpp  Scatter3D.hpp  Showable.hpp  TrisurfPlot.hpp  WireframePlot.hpp  networkx.h  pyplot.hpp
include/pyplot_cpp/converter/: converter.hpp
include/pyplot_cpp/plt/: Argument.h  Arguments.h  Properties.h  Properties.hpp  Property.h  Property.hpp  pyplot.hpp
include/pyplot_cpp/plt/arguments/: Color.h
include/pyplot_cpp/plt/properties/: Color.h
include/pyplot_cpp/python/: PythonRunner.hpp
src/: Argument.cpp  Axisable.cpp  Bar.cpp  CMakeLists.txt  Color.cpp  DiGraph.cpp  DynamicScriptRunner.cpp  Graph.cpp  Histogram.cpp  MultipleHistogram.cpp  MultiplePlot.cpp  MultiplePlot3D.cpp  MultipleScatter.cpp  MultipleScatter3D.cpp  MultipleTrisurfPlot.cpp  Plot3D.cpp  Property.cpp  PythonRunner.cpp  PythonRunner_Unix.cpp  PythonScript.cpp  Scatter.cpp  Scatter3D.cpp  Showable.cpp  TrisurfPlot.cpp  WireframePlot.cpp  converter.cpp  networkx.cpp  pyplot.cpp
src/BasePlot/: BasePlot.cpp
src/Graph/: BaseGraph.cpp
src/Plot/: Plot.cpp
src/Plot3D/: BasePlot3D.cpp  Plot3D.cpp
src/graph/: Graph.cpp  graph.cpp
src/plt/: Color.cpp  Property.cpp  pyplot.cpp
src/python/: DynamicScriptRunner.cpp  DynamicScriptRunner_Unix.cpp  DynamicScriptRunner_Windows.cpp  PythonRunner.cpp  PythonRunner_Unix.cpp  PythonScript.cpp
test/: Bar_Test.cpp  BoostTest_ContextLoad_Test.cpp  CMakeLists.txt  DiGraph_Test.cpp  Graph_Test.cpp  Hist_Test.cpp  LinePlot3D_Test.cpp  MultipleHistogram_Test.cpp  MultiplePlot_Test.cpp  Plot_Test.cpp  PythonRunner_Test.cpp  PythonScript_Test.cpp  Scatter3D_Test.cpp  Scatter_Test.cpp  TrisurfPlot_Test.cpp
